Improve API and tools for AI workflow. (#93) (#112)
Improve API and tools for AI workflow. (#93)